# releaseguard

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  run.py
releaseguard/: __init__.py  config.py
releaseguard/api/: main.py  schemas.py
releaseguard/api/routes/: health.py  releases.py
releaseguard/collectors/: __init__.py  junit_parser.py
releaseguard/db/: __init__.py  models.py  session.py
releaseguard/db/migrations/: env.py
releaseguard/db/migrations/versions/: 001_initial.py
releaseguard/engine/: __init__.py  rules.py  scoring.py
tests/: __init__.py  conftest.py  test_api.py  test_engine.py
